update to formatting/html/css

--- a/index.html
+++ b/index.html
@@ -12,28 +12,26 @@
     <header>
         <h1>SAMPLE LAUNCH DATA</h1>
         <nav>
-            <ul id="cake-list">
-                <!-- <li>Cake Name</li>
-        <li>Another Cake Name</li>
-        <li>And Another Cake Name</li> -->
+            <ul id="launch-list">
             </ul>
         </nav>
     </header>
 
     <main>
         <!-- have some redundancies with name and mission name. consider consolidating to one or the other -->
-        <div class="cake-details">
-            <h2 id="cake-name">Cake Name Goes Here</h2>
-            <img id="cake-image" alt="Cake Name Goes Here" src="assets/image-placeholder.jpg" />
-            <h4>Mission Name:</h4>
-            <p id="missionName">insert desc</p>
+        <div class="flight-details">
+            <img id="flight-image" alt="Flight Name Goes Here" src="assets/image-placeholder.jpg" />
+            <h4>Mission Name & Flight Number:</h4>
+            <p id="missionName">insert name</p>
             <h4>Launch Date:</h4>
             <p id="launchDate">insert launch date</p>
             <h4>Mission Success:</h4>
             <p id="success">success Y/N</p>
+            <h4>Rocket:</h4>
+            <p id="rocket">rocket</p>
             <h4>Description</h4>
             <p>
-                <em id="cake-description">Cake Description Goes Here</em>
+                <em id="flight-description">flight desc</em>
             </p>
 
             <button id="previous">Previous Launch</button>
