--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <h1>SAMPLE LAUNCH DATA</h1>
+        <h1>SpaceX Launch Data</h1>
         <nav>
             <ul id="launch-list">
             </ul>
